# tidsreg

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/tidsreg/: __init__.py  api.py  bulk.py  cli.py  exceptions.py  models.py  utils.py
tests/: test_utils.py
