[project]
name = "tidsreg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "playwright>=1.47.0",
]

[project.scripts]
tidsreg = "tidsreg.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "ruff>=0.6.9",
]

[tool.ruff.lint]
select = ["F","E","I","B","S","DTZ","SIM", "RUF"]
ignore = ["E501"]
